k8s/broker.yaml

apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  ports:
    - name: broker-port
      port: 5672
      targetPort: 5672
  selector:
    app: broker
