k8s/checker_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checker-app
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: django
    spec:
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      containers:
        - name: checker-app
          image: registry.skyeng-test-task.xyz/checker_app:${IMAGE_TAG}
          command: [ "gunicorn", "--chdir", "./src", "config.wsgi:application", "--bind", "0.0.0.0:8000" ]
          ports:
            - containerPort: 8000
          resources: { }
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
---

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: LoadBalancer
  selector:
    app: django
  ports:
    - name: app-port
      port: 8000
      targetPort: 8000
