k8s/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.6.2
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: image-store
              mountPath: "/var/lib/registry"
      volumes:
        - name: image-store
          emptyDir: { }

---

apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: LoadBalancer
  ports:
    - name: registry-port
      port: 80
      targetPort: 80
  selector:
    app: docker-registry
