k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
  name: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry.skyeng-test-task.xyz
        - skyeng-test-task.xyz
      secretName: letsencrypt-production
  rules:
    - host: skyeng-test-task.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
    - host: registry.skyeng-test-task.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
